package com.primefuel.fulltank.platform.reporting.domain.model.queries;

public record GetBuyerAnalyticsQuery(Long companyId) {
}
