package com.primefuel.fulltank.platform.reporting.domain.model.valueobjects;

public record MonthlyAmount(String month, int monthIndex, double amount) {
}
